update portainer docker compose

--- a/nginx/app-portainer/docker-compose.yaml
+++ b/nginx/app-portainer/docker-compose.yaml
@@ -1,9 +1,9 @@
 version: '3.3'
 
 services:
-  portainer-ce:
+  app-portainer:
     image: portainer/portainer-ce:latest
-    container_name: portainer
+    container_name: app-portainer
     networks:
       - nginx-proxy
     restart: always
@@ -11,7 +11,7 @@ services:
       - no-new-privileges:true
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - /home/box-app/portainer:/data
+      - ./data:/data
     ports:
       - '127.0.0.1:9000:9000'
       - '127.0.0.1:8000:8000'
