--- a/nginx/app-portainer/docker-compose.yaml
+++ b/nginx/app-portainer/docker-compose.yaml
@@ -1,20 +1,17 @@
-version: '3.3'
+version: "3"
 
 services:
   app-portainer:
-    image: portainer/portainer-ce:latest
     container_name: app-portainer
+    image: portainer/portainer-ce:latest
     networks:
       - nginx-proxy
-    restart: always
-    security_opt:
-      - no-new-privileges:true
+    ports:
+      - "127.0.0.1:9443:9443"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./data:/data
-    ports:
-      - '127.0.0.1:9000:9000'
-      - '127.0.0.1:8000:8000'
+    restart: always
 
 networks:
   nginx-proxy:
