--- a/nginx/setup/final.conf
+++ b/nginx/setup/final.conf
@@ -23,17 +23,52 @@ server {
     ssl_certificate /etc/letsencrypt/live/sillyroach.com/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/sillyroach.com/privkey.pem;
 
-	location /qbittorrent/ {
-		proxy_pass http://172.29.0.3:8090/;
-		proxy_http_version 1.1;
+    proxy_ssl_protocols TLSv1.3;
 
-		proxy_set_header   Host               172.29.0.3:8090;
-		proxy_set_header   X-Forwarded-Host   $http_host;
-		proxy_set_header   X-Forwarded-For    $remote_addr;
-		#proxy_hide_header       Referer;
-		#proxy_hide_header       Origin;
-		#proxy_set_header        Referer                 '';
-		#proxy_set_header        Origin                  '';
-		#proxy_cookie_path  /                  "/; Secure";
-	}
+    location /qbittorrent/ {
+        proxy_pass http://192.168.64.5:8090/;
+	proxy_http_version 1.1;
+        proxy_set_header   Host               192.168.64.3:8090;
+	proxy_set_header   X-Forwarded-Host   $http_host;
+	proxy_set_header   X-Forwarded-For    $remote_addr;
+    }
+
+    location /portainer/ {
+        proxy_pass              http://192.168.64.4:9000/;
+        proxy_set_header        Host                    $host;
+        proxy_set_header        Connection              "";
+        proxy_http_version      1.1;
+    }
+
+    location /portainer/api/websocket/ {
+        proxy_pass              http://192.168.64.4:9000/api/websocket/;
+        proxy_set_header        Upgrade                 $http_upgrade;
+        proxy_set_header        Connection              "upgrade";
+        proxy_http_version      1.1;
+    }
+
+    location /filebrowser/ {
+        proxy_pass http://192.168.64.3:8081; 
+        proxy_redirect off;
+        
+        proxy_set_header                        X-Forwarded-Host $host;
+	    proxy_set_header                        X-Forwarded-Server $host;
+        proxy_set_header                        X-Real-IP $remote_addr;
+        proxy_set_header                        Host $http_host;
+        proxy_set_header                        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header                        Upgrade $http_upgrade;
+        proxy_set_header                        Connection "upgrade";
+        
+        proxy_http_version 1.1;
+        client_max_body_size 0;
+        proxy_request_buffering off;        
+    }
+
+    location /firefox/ {
+	    proxy_pass http://192.168.64.6:3000/;
+	    proxy_http_version 1.1;
+	    proxy_set_header Upgrade $http_upgrade;
+	    proxy_set_header Connection "upgrade";
+        proxy_read_timeout 86400;
+     }
 }
