--- a/nginx/app-firefox/docker-compose.yaml
+++ b/nginx/app-firefox/docker-compose.yaml
@@ -1,16 +1,22 @@
----
-version: "2.1"
+version: "3"
+
 services:
-  firefox:
+  app-firefox:
     image: lscr.io/linuxserver/firefox:latest
-    container_name: firefox
+    container_name: app-firefox
     environment:
       - PUID=1000
       - PGID=1000
-      - TZ=Europe/London
+      - TZ=Europe/Berlin
     volumes:
       - ./config:/config
     ports:
-      - 3000:3000
+      - "0.0.0.0:3000:3000"
     shm_size: "1gb"
     restart: unless-stopped
+    networks:
+      - nginx-proxy
+
+networks:
+  nginx-proxy:
+    external: true
